2008-04-14  Matthias Clasen  <mclasen@redhat.com>

	* client/gvfsfusedaemon.c: You cannot store pointers in integers.
	Fixes a crash on 64bit systems.

2008-04-14  Matthias Clasen  <mclasen@redhat.com>

	* common/gmounttracker.c (g_mount_tracker_finalize): Only free
	lock if it is non-NULL. Pointed out by Denis Leroy.

2008-04-07  David Zeuthen  <davidz@redhat.com>

	* hal/ghalvolume.c (g_hal_volume_new): Unbreak the gphoto2 backend
	by allowing automounting.

	* programs/gvfs-mount.c (main, unmount_all_with_scheme): Add a
	new option --unmount-scheme

	* AUTHORS: Add cdda and gphoto2 backends

2008-04-05  Christian Kellner  <gicmo@gnome.org>

	* client/httpuri.c: 
	Only set a port in the mount spec if it is not the default
	port for the scheme.

	* daemon/gvfsbackenddav.c:
	Cleanup mount function a bit.

2008-04-04  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c:
	Implement set_display_name. (#525980) 
	With this patch we also do our own redirection handling which
	alyways allows redirects from /a/b -> /a/b/ (trainling slashes)
	even for non safe methods. Also some code was cleaned up.

2008-04-02  Christian Kellner  <gicmo@gnome.org>

	* hal/hal-utils.h:
	* hal/hal-utils.c:
	Create new files for utility functions and move get_disc_icon()
	and get_disc_name() here.
	Also create get_themed_icon_with_fallbacks() to create
	GThemedIcons with default fallbacks but with the ability to
	pass in another name to create the fallbacks from then the
	icon name.

	* hal/ghalmount.c:
	* hal/ghalvolume.c:
	Use newly created get_themed_icon_with_fallbacks () and pass
	in custom fallback name for encrypted mounts/volumes (#525153).

	* hal/Makefile.am:
	Add hal-utils.[hc]

	* programs/gvfs-mount.c:
	Display the icon names for mounts/volumes if the icon is
	a GThemedIcon.
	
	[Merged from gnome-2-22]

2008-04-01  Sebastien Bacher  <seb128@ubuntu.com>

	* hal/ghalmount.c: (format_size_for_display), (do_update_from_hal):